--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Calculator</title>
   <link rel="stylesheet" href="style.css">
+  <!-- OPen Graph Meta Tags -->
+  <meta property="og:title"content="Simple Calculator">
+  <meta property="og:description"content="Calculate Simple Arithmatic Operations">">
+  <meta property="og:type" content="website">
+  <meta property="og:image" content="https://i.postimg.cc/tg050JGf/igrace.png">
+  <!-- Favicon  -->
+  <link rel="icon" href="igrace.png" type="image/x-icon">
 </head>
 <body>
   <div class="calc-container">
