--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
   <!-- OPen Graph Meta Tags -->
   <meta property="og:title"content="Simple Calculator">
-  <meta property="og:description"content="Calculate Simple Arithmatic Operations">">
+  <meta property="og:description"content="Calculate Simple Arithmatic Operations">
   <meta property="og:type" content="website">
   <meta property="og:image" content="https://i.postimg.cc/tg050JGf/igrace.png">
   <!-- Favicon  -->
