--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <button data-number class="number">2</button>
     <button data-number class="number">3</button>
     <button data-operation class="multipication operand">*</button>
-    <button data-number lass="number">4</button>
-    <button data-number lass="number">5</button>
-    <button data-number lass="number">6</button>
+    <button data-number class="number">4</button>
+    <button data-number class="number">5</button>
+    <button data-number class="number">6</button>
     <button data-operation class="plus operand">+</button>
     <button data-number class="number">7</button>
     <button data-number class="number">8</button>
